# bill-payments

./: README.md  api.mak  az.mak  k8s.mak  mk.mak
IaC/: README.md
IaC/cloudformation/: cloudformationdynamodb.json
IaC/k8s/: service-gateway-timeout.yaml  service-gateway.yaml
code/: README.md
code/Gatling/: README.MD
code/Gatling/Load/: FinalSimulation.scala  LoadSimulation.scala  bill.csv  biller.csv  pay.csv  user.csv  (+1 more)
code/bill/: Dockerfile  README.md  app.py  bill.yaml
code/biller/: Dockerfile  README.md  app.py  biller.yaml
code/db/: Dockerfile  README.md  app.py  config.json  db.yaml
code/load_simulation/: AzureSimulation.scala
code/user/: Dockerfile  README.md  app.py  user.yaml  user_destination.yaml
docs/: README.md
docs/aks/: AKS_steps.txt
docs/bill_service/: bill_api_getuserbill_cmd.txt
docs/diagrams/: Architecture.pptx
docs/docker/: docker_steps.txt
docs/docs/docs/: pyproject.toml
docs/docs/docs/source/: documentation.rst
docs/docs/docs/source/bokeh/: docs-navbar.html  docs-sidebar.html  docs-toc.html  footer.html  ga.html  layout.html  meta.html  theme.conf  theme.py
docs/docs/docs/source/bokeh/static/: custom.css  sphinx-bootstrap.css_t
docs/gatling.io/: Failure_Analysis.txt  Gatling_steps.txt  Timeout_Param_Analysis.txt
docs/minikube/: minikube_steps.txt
docs/postman/: README.md
postman_collections/: Azure.postman_environment.json  Bill Service.postman_collection.json  Biller Service.postman_collection.json  Minikube.postman_environment.json  T4-Wednesday.postman_globals.json  User Service.postman_collection.json
(+73 files in other folders)
